tests/fixtures/invalid/pow_set_bool_none.py
# Cannot call pow() with Set[int], Bool, None
x = pow({1, 2, 3}, True, None)
